Clean up images, add the Monty Hall problem to Prob+Stats section, add new Conceptual ML section (#97)
* DOC: update image for pi

* DOC: updated images for q 2.1,2.3. remove image for q 2.2

* ENH: Add Monty hall problem to Prob+Stats section

* ENH: added 2 new questions under a new section called Conceptual ML

* DOC: proof read questions in Conceptual ML

* DOC: updated typos in monty hall problem. removed ref to monty hall

* DOC: update README.md to reflect new questions

* DOC: update year in description for setting ds-position

* DOC: Update Q 3.2 wording

--- a/ds-interview-exam.ipynb
+++ b/ds-interview-exam.ipynb
@@ -166,7 +166,7 @@
    "metadata": {},
    "source": [
     "### Q 2.1: Finding $\\pi$ in a random uniform?\n",
-    "![pi pie img](http://core2.staticworld.net/images/article/2016/03/pi-day-intro-100649273-carousel.idge.jpeg)\n",
+    "<img src=https://www.epicurus.com/food/recipes/wp-content/uploads/2015/03/Pi-Day.jpg width=\"480\">\n",
     "\n",
     "Given a uniform random generator $[0,1)$ (e.g., use your language's standard libary to generate random value), write a a function `compute_pi` to compute [$\\pi$](https://en.wikipedia.org/wiki/Pi)."
    ]
@@ -177,8 +177,6 @@
    "source": [
     "### Q 2.2: Making a 6-side die roll a 7?\n",
     "\n",
-    "![reno die image](http://thumbs.ebaystatic.com/images/g/IQ8AAOSwvzRXyagD/s-l225.jpg)\n",
-    "\n",
     "Using a single 6-side die, how can you generate a random number between 1 - 7?"
    ]
   },
@@ -188,7 +186,8 @@
    "source": [
     "### Q 2.3: Is normality uniform?\n",
     "\n",
-    "![normal and uniform distributions](https://qph.ec.quoracdn.net/main-qimg-f6ed71ed1d0059760fb63db384dcbcca-c)\n",
+    "<img src=https://rednaxela1618.files.wordpress.com/2014/06/uniformnormal.png width=\"480\">\n",
+    "\n",
     "\n",
     "Given draws from a normal distribution with known parameters, how can you simulate draws from a uniform distribution?"
    ]
@@ -214,6 +213,72 @@
     "\n",
     "You request 2 UberX’s and 3 Lyfts. If the time that each takes to reach you is IID, what is the probability that all the Lyfts arrive first? What is the probability that all the UberX’s arrive first?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q 2.6: Pick your prize\n",
+    "<img src=https://miro.medium.com/max/1100/1*m5b3O9sE68UCXjLw5oxy2g.png width=\"480\">\n",
+    "\n",
+    "A prize is placed at random behind one of three doors and you are asked to pick a door. To be concrete, say you always pick door 1. Now the game host chooses one of door 2 or 3, opens it and shows you that it is empty. They then give you the option to keep your picked door or switch to the unopened door. Should you stay or switch if you want to maximize your probability of winning the prize?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3 Conceptual ML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q 3.1 Why study gradient boosting or neural networks?\n",
+    "\n",
+    "Consider a regression setting where $X \\in \\mathbb{R}^p$ and $Y \\in \\mathbb{R}$. The goal is to come up with a function $f(X): \\mathbb{R}^p \\rightarrow \\mathbb{R}$ that minimizes the squared-error loss $(Y - f(X))^2$. Since X, Y are random variables, we seek to minimize the expectation of the squared error loss as follows\n",
+    "\\begin{equation}\n",
+    "EPE(f) = \\mathbb{E}\\left[(Y-f(X)^2\\right]\n",
+    "\\end{equation}\n",
+    "where EPE stands for expected prediction error. One can show that minimizing the expected prediction error leads to the following _regression function_\n",
+    "\\begin{equation}\n",
+    "f(x) = \\mathbb{E}\\left[Y|X=x\\right]\n",
+    "\\end{equation}\n",
+    "\n",
+    "The goal of any method is to approximate the regression function above, which we denote as $\\hat{f}(x)$. For example, linear regression explicitly assumes that the regression function is approximately linear in its arguments, i.e. $\\hat{f}(x) = x^T\\beta$ while a neural network provides a nonlinear approximation of the regression function. \n",
+    "\n",
+    "The simplest of all these methods is [k-nearest neighbors](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm). Given $x$ and some neighbourhood of $k$ points $N_k(x)$, $\\hat{f}(x)$ is simply the average of all $y_i|x_i \\in N_k(x)$.  Let $N$ denote the training sample size. Under mild regularity conditions on the joint probability distribution $Pr(X, Y)$, one can show that as $N \\rightarrow \\infty$, $k \\rightarrow \\infty$ such that $k/N \\rightarrow 0$, then $\\hat{f}(x) \\rightarrow f(x)$ where $\\rightarrow$ means approaches or goes to. In other words, the k-nearest neighbors algorithm converges to the ideal solution as both the training sample size and number of neighbors increase to infinity.\n",
+    "\n",
+    "Now given this _universal approximator_, why look any further and research other methods? Please share your thoughts.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q 3.2 Model Selection and Assesment\n",
+    "\n",
+    "Consider a multiclass classification problem with a large number of features $p >> N$, for e.g $p=10000, N=100$ The task is threefold\n",
+    "1. Find a \"good\" subset of features that show strong _univariate_ correlation with class labels\n",
+    "2. Using the \"good\" subset, build a multi class classifier\n",
+    "3. Estimate the generalization error of the final model\n",
+    "\n",
+    "Given this dataset, outline your approach and please be sure to cover the following\n",
+    "- Data splitting\n",
+    "- Model Selection: either estimating the performance of different classifiers or the same classifier with different hyperparameters\n",
+    "- Model Assessment: having chosen a classifier, estimating the generalization error\n",
+    "\n",
+    "Assume all features are numerical, the dataset contains no NULLS, outliers, etc. and doesn't require any preprocessing.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -236,5 +301,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
