--- a/submittals/data-scientist-intern-2021-Q4/duong-shara/ds-interview-exam.ipynb
+++ b/submittals/data-scientist-intern-2021-Q4/duong-shara/ds-interview-exam.ipynb
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "complexity: O(2^n)\n",
+    "complexity: O(2^n)\\\n",
     "the function calls itself twice for each run, so for n calls, it is O(2^n)"
    ]
   },
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "complexity = O(n)\n",
+    "complexity = O(n)\\\n",
     "appending to the list costs O(1); doing it n times is O(n)"
    ]
   },
@@ -179,7 +179,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By rolling the die twice, we end up with 36 pairs: {(1,1), (1,2), (1,3), ..., (6,6)} that have an equal chance of appearing. Discard one of these pair by having it indicate a re-roll. There is now 35 equally-likely results. \n",
+    "By rolling the die twice, we end up with 36 pairs: {(1,1), (1,2), (1,3), ..., (6,6)} that have an equal chance of appearing. \\\n",
+    "Discard one of these pair by having it indicate a re-roll. There is now 35 equally-likely results. \\\n",
     "Map 5 of these unique pair for each number from 1 to 7, simulating a 5/35 = 1/7 chance of \"rolling\" any of the numbers.\n",
     "\n",
     "This solution suffices for general purposes but may not be practical for simulating a large number of rolls (due to the chance of constantly re-rolling)."
