Exam submittal for data-scientist-intern-2021-Q4

--- a/submittals/data-scientist-intern-2021-Q4/duong-shara/ds-interview-exam.ipynb
+++ b/submittals/data-scientist-intern-2021-Q4/duong-shara/ds-interview-exam.ipynb
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "complexity: O(2^n)\\\n",
+    "complexity: O(2^n)  \n",
     "the function calls itself twice for each run, so for n calls, it is O(2^n)"
    ]
   },
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "complexity = O(n)\\\n",
+    "complexity = O(n)  \n",
     "appending to the list costs O(1); doing it n times is O(n)"
    ]
   },
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the function were to be called repeatedly, then memoization could be used to cache previously calculated values and avoid repetitive computations. \n",
+    "If the function were to be called repeatedly, then memoization could be used to cache previously calculated values and avoid repetitive computations.  \n",
     "\n",
     "The nth Fibonacci number could also be directly calculated through Binet's Formula."
    ]
@@ -223,7 +223,7 @@
     "With only N=100, the data is insufficient for machine learning models such as MLPs and would lead to poor generalization. Even with less complex models like random forest, overfitting may still be a problem with so little cases and possibly high number of features to train on. Simpler classifiers may be the best choice in this case, so I would try KNN, SVM, and Logistic Regression and compare their results to determine the best one. \n",
     "For a concrete example, suppose KNN is chosen. The data will be rescaled if needed and then randomly split into 20% test and 80% training sets. To determine the parameter of how many neighbors to consider, K, I would start by testing a wide range of values, like between 1 and 50, and comparing performance on the training and test sets with a simple plot. From there, I would close onto the best K value based on where error and overfit (the difference in train and test performance) is low. To better generalize the model, k-fold cross validation can be used.\n",
     "\n",
-    "Multiple resampling of the test/train set can be used to assess the model. Ideally, the results should not show high fluctuation in performance when trying different sets. Given that the classes are balanced, a confusion matrix can be used to see overall accuracies and reveal any specific classes that the model has trouble identifying. If false positives are a concern, precision, recall and F1 scores can also be considered."
+    "Multiple resampling of the test/train set can be used to assess the model. Ideally, the results should not show high fluctuation in performance when trying different sets. Given that the classes have been balanced, a confusion matrix can be used to see overall accuracies and reveal any specific classes that the model has trouble identifying. If false positives are a concern, precision, recall and F1 scores can also be considered."
    ]
   }
  ],
