--- a/submittals/data-scientist-intern-2021-Q4/duong-shara/ds-interview-exam.ipynb
+++ b/submittals/data-scientist-intern-2021-Q4/duong-shara/ds-interview-exam.ipynb
@@ -190,6 +190,148 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Testing this idea with a simulation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/36 ~  0.027777777777777776 \n",
+      "35/36 * 1/7 ~  0.1388888888888889\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Results</th>\n",
+       "      <th>%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>27391</td>\n",
+       "      <td>0.027391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>138780</td>\n",
+       "      <td>0.138780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>138807</td>\n",
+       "      <td>0.138807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>138465</td>\n",
+       "      <td>0.138465</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>139687</td>\n",
+       "      <td>0.139687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>138634</td>\n",
+       "      <td>0.138634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>138602</td>\n",
+       "      <td>0.138602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>139634</td>\n",
+       "      <td>0.139634</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Results         %\n",
+       "0    27391  0.027391\n",
+       "1   138780  0.138780\n",
+       "2   138807  0.138807\n",
+       "3   138465  0.138465\n",
+       "4   139687  0.139687\n",
+       "5   138634  0.138634\n",
+       "6   138602  0.138602\n",
+       "7   139634  0.139634"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "def diceRoll(): #give random number from 1 to 6\n",
+    "    return str(random.randint(1,6))\n",
+    "\n",
+    "def roll7():\n",
+    "    m = {1: [11, 12, 13, 14, 15],\n",
+    "         2: [16, 21, 22, 23, 24],\n",
+    "         3: [25, 26, 31, 32, 33],\n",
+    "         4: [34, 35, 36, 41, 42],\n",
+    "         5: [43, 44, 45, 46, 51],\n",
+    "         6: [52, 53, 54, 55, 56],\n",
+    "         7: [61, 62, 63, 64, 65]}\n",
+    "    \n",
+    "    d1 = diceRoll(); d2 = diceRoll() #roll twice\n",
+    "    \n",
+    "    for i in range(1,8):\n",
+    "        if int(d1+d2) in m[i]: \n",
+    "            return i\n",
+    "    return 0 #indicates re-roll\n",
+    "\n",
+    "results = [] #keep track of each result\n",
+    "rolls = 1000000 #simulate 1000000 rolls of the \"7-sided die\" \n",
+    "for i in range(rolls): \n",
+    "    results.append(roll7())\n",
+    "\n",
+    "total = np.unique(results, return_counts=True)[1]\n",
+    "chance = total/rolls\n",
+    "print ('1/36 ~ ', 1/36, '\\n35/36 * 1/7 ~ ', 35/36/7)\n",
+    "pd.DataFrame({'Results': total, '%':chance})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3 Conceptual ML"
    ]
   },
