Exam submittal for data-scientist-intern-2021-Q4

--- a/submittals/data-scientist-intern-2021-Q4/duong-shara/ds-interview-exam.ipynb
+++ b/submittals/data-scientist-intern-2021-Q4/duong-shara/ds-interview-exam.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,15 +114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#iterative\n",
     "def fibonacci2(n):\n",
     "    f = [1,1]\n",
-    "    while(n > len(f)):\n",
-    "        f.append(f[len(f)-2]+f[len(f)-1])\n",
+    "    for i in range(2, n):\n",
+    "        f.append(f[-2]+f[-1])\n",
     "    return f[n-1]"
    ]
   },
